--- a/CPS410Final/packages.config
+++ b/CPS410Final/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="3.3.1" targetFramework="net472" developmentDependency="true" />
   <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.7.0" targetFramework="net472" />
 </packages>
