--- a/CPS410Final/CPS410Final.csproj
+++ b/CPS410Final/CPS410Final.csproj
@@ -86,6 +86,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="EditAccount.aspx" />
+    <Content Include="fourmCss.css" />
     <Content Include="Subject.aspx" />
     <Content Include="Thread.aspx" />
     <Content Include="Global.asax" />
