--- a/CPS410Final/Web.config
+++ b/CPS410Final/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -6,13 +6,18 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="siteDBConnectionString" connectionString="Data Source=tutorsite.database.windows.net;Initial Catalog=siteDB;User ID=team10;Password=Cps410Cps410"
-      providerName="System.Data.SqlClient" />
+    <add name="siteDBConnectionString"
+      connectionString="Data Source=tutorsite.database.windows.net;Initial Catalog=siteDB;User ID=team10;Password=Cps410Cps410"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
+
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+  </appSettings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -23,9 +28,5 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-
-  <appSettings>
-    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
-  </appSettings>
 
 </configuration>
